basic enums: constants are defined with `val Name(args);` constructors are as normal also modify parsing to correctly parse generic names, constructor names also produce more readable error messages with constructors