@@ -7,10 +7,12 @@ import cyclic.lang.compiler.model.instructions.Scope;
 import cyclic.lang.compiler.model.instructions.Statement;
 import cyclic.lang.compiler.model.instructions.Variable;
 import cyclic.lang.compiler.model.platform.ArrayTypeRef;
+import cyclic.lang.compiler.resolve.PlatformDependency;
 import cyclic.lang.compiler.resolve.TypeResolver;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class CyclicConstructor implements CyclicCallable{
@@ -21,22 +23,26 @@ public class CyclicConstructor implements CyclicCallable{
 	boolean isS = false, isVargs = false;
 	
 	List<CyclicLangParser.TypeContext> paramTypeNames = new ArrayList<>();
+	CyclicLangParser.ConstructorContext text;
 	CyclicLangParser.BlockContext blockStatement;
 	CyclicLangParser.StatementContext arrowStatement;
 	
-	List<TypeReference> parameters;
+	List<TypeReference> parameters = new ArrayList<>();
 	public Statement body = null;
 	public Scope scope = new Scope();
 	
 	public boolean isGeneratedRecordCtor = false;
 	public boolean isCanonRecordCtor = false;
-	private boolean isInitBlock = false;
+	public boolean isInitBlock = false;
 	
 	// for explicit constructors
 	public CyclicConstructor(CyclicLangParser.ConstructorContext ctx, CyclicType in){
 		this.in = in;
+		text = ctx;
 		flags = Utils.fromModifiers(ctx.modifiers());
 		flags = new AccessFlags(flags.visibility(), false, false); // no final or abstract constructors
+		if(!ctx.idPart().getText().equals(in.shortName()))
+			throw new CompileTimeException(ctx.idPart(), "Return type required for method");
 		
 		for(var p : ctx.parameters().parameter()){
 			paramTypeNames.add(p.type());
@@ -64,7 +70,6 @@ public class CyclicConstructor implements CyclicCallable{
 		flags = new AccessFlags(Visibility.PACKAGE_PRIVATE, false, false);
 		blockStatement = ctx.block();
 		isS = ctx.STATIC() != null;
-		parameters = new ArrayList<>();
 		isInitBlock = true;
 	}
 	
@@ -74,7 +79,6 @@ public class CyclicConstructor implements CyclicCallable{
 		flags = new AccessFlags(Visibility.PACKAGE_PRIVATE, false, false);
 		body = null;
 		isS = isStatic;
-		parameters = new ArrayList<>();
 	}
 	
 	// for record canonical ctor
@@ -87,10 +91,16 @@ public class CyclicConstructor implements CyclicCallable{
 	}
 	
 	public void resolve(){
-		List<String> imports = in.imports;
-		parameters = paramTypeNames.stream()
-				.map(x -> TypeResolver.resolve(x, imports, in.packageName()))
-				.collect(Collectors.toList());
+		if(!isStatic() && in().kind() == TypeKind.ENUM){
+			parameters.add(PlatformDependency.INT);
+			paramNames.add("~enumOrdinal");
+			parameters.add(Utils.forAnyClass(String.class));
+			paramNames.add("~enumName");
+		}
+		
+		parameters.addAll(paramTypeNames.stream()
+				.map(x -> TypeResolver.resolve(x, in.imports, in.packageName()))
+				.toList());
 		
 		if(isVarargs())
 			parameters.set(parameters.size() - 1, new ArrayTypeRef(parameters.get(parameters.size() - 1)));
@@ -140,30 +150,36 @@ public class CyclicConstructor implements CyclicCallable{
 				isCanonRecordCtor = true;
 		}
 		
-		if(hasExplicitCtorCall()){
+		Optional<Statement> cCallOpt = explicitCtorCall();
+		if(cCallOpt.isPresent()){
+			var cCallText = cCallOpt.get().text;
 			if(isStatic())
-				throw new CompileTimeException(null, "Constructor call not allowed in static block");
+				throw new CompileTimeException(cCallText, "Constructor call not allowed in static block");
 			
 			// check that the body is either of those statements, or starts with either, and contains no other references to either
 			// TODO: relax restrictions on pre-super-constructor instructions?
-			Statement.CtorCallStatement ctorCall;
-			if(!(body instanceof Statement.CtorCallStatement cc)){
-				if(!(body instanceof Statement.BlockStatement block && block.contains.get(0) instanceof Statement.CtorCallStatement cc))
-					throw new CompileTimeException(null, "Must have an explicit constructor call first");
-				else
-					ctorCall = cc;
-			}else
-				ctorCall = cc;
+			Statement.CtorCallStatement ctorCall = (Statement.CtorCallStatement)cCallOpt.get();
+			// simplify should be idempotent, make sure it's a valid call
+			ctorCall.simplify();
+			if(!(body instanceof Statement.CtorCallStatement))
+				if(!(body instanceof Statement.BlockStatement block && block.contains.get(0) instanceof Statement.CtorCallStatement))
+					throw new CompileTimeException(cCallText, "Must have an explicit constructor call first");
 			if(in.kind() == TypeKind.RECORD){
 				if(isCanonRecordCtor)
-					throw new CompileTimeException(null, "Canonical record constructors must not have an explicit constructor call");
-				else if(!ctorCall.target.in().fullyQualifiedName().equals(in.fullyQualifiedName())){
+					throw new CompileTimeException(cCallText, "Canonical record constructors must not have an explicit constructor call");
+				else if(!ctorCall.target.in().fullyQualifiedName().equals(in.fullyQualifiedName()))
 					// no super()s in records
-					throw new CompileTimeException(null, "Record constructors cannot call a super-constructor");
-				}
+					throw new CompileTimeException(cCallText, "Record constructors cannot call a super-constructor");
+			}
+			if(in.kind() == TypeKind.ENUM){
+				if(!ctorCall.target.in().fullyQualifiedName().equals(in.fullyQualifiedName()))
+					// no super()s in enums
+					throw new CompileTimeException(cCallText, "Enum constructors cannot call a super-constructor");
 			}
 		}else{
-			if(!isCanonRecordCtor && in.superClass().constructors().stream().noneMatch(x -> x.parameters().size() == 0)){
+			if(!isCanonRecordCtor
+					&& in.kind() != TypeKind.ENUM
+					&& in.superClass().constructors().stream().noneMatch(x -> x.parameters().size() == 0)){
 				System.out.println(in.superClass().constructors());
 				in.superClass().constructors().forEach(x -> System.out.println(x.parameters().size()));
 				throw new CompileTimeException(null, "Missing explicit constructor call (superclass has no 0-arg constructors)");
@@ -180,8 +196,8 @@ public class CyclicConstructor implements CyclicCallable{
 			new Variable(paramNames.get(i), parameters.get(i), scope, null);
 	}
 	
-	public boolean hasExplicitCtorCall(){
-		return Flow.firstMatching(body, Statement.CtorCallStatement.class::isInstance).isPresent();
+	public Optional<Statement> explicitCtorCall(){
+		return Flow.firstMatching(body, Statement.CtorCallStatement.class::isInstance);
 	}
 	
 	public Statement getBody(){
